# midi2osc

./: CMakeLists.txt  Config.cpp  Config.h  Makefile  MessageMapper.cpp  MessageMapper.h  MidiMessage.cpp  MidiMessage.h  Osc.cpp  Osc.h  OscMessage.cpp  OscMessage.h  Readme.md  cmake_install.cmake  main.cpp  midi2osc.config
